Use bash's built-in "mapfile" command